[package]
name = "forkjoin-benchmarking"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]

[dependencies]
argparse = "*"
time = "*"
# forkjoin = "2.3.*"

[dependencies.criterion]
git = "https://github.com/faern/criterion.rs"
# path = "../criterion/criterion.rs/"
branch = "develop"

[dependencies.forkjoin]
# path = "../forkjoin.v2/"
git = "https://github.com/faern/forkjoin"
branch = "feature/optimizefork"
# features = ["threadstats"]

# [profile.release]
# lto = true

[features]
threadstats = ["forkjoin/threadstats"]
