[package]
name = "forkjoin-benchmarking"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]

[dependencies]
argparse = "*"
time = "*"
# forkjoin = "2.3.*"

[dependencies.criterion]
#git = "https://github.com/faern/criterion.rs"
#branch = "develop"
path = "../criterion/criterion.rs/"

[dependencies.forkjoin]
path = "../forkjoin/"
#git = "https://github.com/faern/forkjoin"
#branch = "develop"

# [profile.release]
# lto = true

[features]
threadstats = ["forkjoin/threadstats"]
